--- a/modulo_01/text.html
+++ b/modulo_01/text.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Texto</title>
     <link rel="stylesheet" href="css/text.css">
 </head>
 
